-.-.- (--.--.2013):
- add Kill Task action;
- some other changes.

1.1.2 (10.06.2012):
- increased task light size a bit;
- fixed label position for zoom animation;
- avoid hijacking of icons with launcher connected to task group (if grouping by program);
- clear thumbnail when launcher looses connected task.

1.1.1 (01.06.2012):
- reuse launcher icons by tasks also when using manual sorting;
- let startups connect to launcher icons (when there is no sorting or it set to manual);
- do not lose connection with launcher when group is created (if grouping by program);
- enable Apply button when configuration values are changed;
- do not propose to drop icon in place which equals its current index;
- enable Add / Remove action buttons;
- many other fixes and changes.

1.1.0 (20.03.2012):
- added per launcher task connecting rules;
- use command name for default launcher matching rules;
- added toggle fullscreen, minimize, maximize etc actions;
- show item tool tip instantly;
- added support for showing tasks from current activity only;
- window context menus for entries of Entries menu also for not grouped tasks;
- added own pin task action;
- preparations for removing use of libtaskmanager;
- lots of other internal (tasks management related) improvements and fixes.

1.0.99 (05.03.2012):
- show title label by default;
- change default animation to glow;
- make thumbnails work with raster graphics system;
- hide option to use thumbnails if it is not available;
- added Settings entry to icon context menu;
- fixed triggering actions with keyboard modifiers;
- remove custom implementation of task activation.

1.0.98 (26.02.2012):
- hide standard (and not working) launcher actions;
- do not allow to drop icon on itself;
- code cleanup.

1.0.97 (27.01.2012):
- adapted to changes in KDE 4.8.

1.0.96 (01.12.2011):
- removed group colors (upstream change in libtaskmanager);
- more friendly install script;
- removed compile time dependency on gettext.

1.0.95 (05.08.2011):