@@ -32,7 +32,7 @@
          <widget class="KComboBox" name="titleLabelMode"/>
         </item>
         <item row="2" column="0">
-         <widget class="QLabel" name="customBackgroundPathLabel">
+         <widget class="QLabel" name="customBackgroundImageLabel">
           <property name="text">
            <string>Custom background image:</string>
           </property>
