@@ -1,5 +1,6 @@
 -.-.- (--.--.2013):
 - add Kill Task action;
+- hide background configuration when it is not available;
 - some other changes.
 
 1.1.2 (10.06.2012):
